--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ plugins {
 
 android {
     compileSdk 30
-
     defaultConfig {
         applicationId "com.androidkotlinbase"
         minSdk 21
@@ -30,8 +29,8 @@ android {
         }
     }
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        viewBinding true
     }
 
     flavorDimensions "default"
