--- a/gradle/libs.version.toml
+++ b/gradle/libs.version.toml
@@ -15,6 +15,12 @@ okhttp3BOM = "4.9.3"
 sdpssp = "1.0.6"
 swipeRefresh = "1.1.0"
 paging = "3.1.1"
+fuel = "2.3.1"
+moshi = "1.12.0"
+coil = "0.7.0"
+junit = "4.+"
+testExtJunit = "1.1.3"
+espresso = "3.4.0"
 
 [libraries]
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appCompat" }
@@ -39,3 +45,12 @@ sdp = { module = "com.intuit.sdp:sdp-android", version.ref = "sdpssp" }
 ssp = { module = "com.intuit.ssp:ssp-android", version.ref = "sdpssp" }
 androidx-swipe-refresh = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "swipeRefresh" }
 androidx-paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "paging" }
+fuel = { module = "com.github.kittinunf.fuel:fuel", version.ref = "fuel" }
+fuel-coroutines = { module = "com.github.kittinunf.fuel:fuel-coroutines", version.ref = "fuel" }
+fuel-moshi = { module = "com.github.kittinunf.fuel:fuel-moshi", version.ref = "fuel" }
+moshi = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
+coil = { module = "io.coil-kt:coil", version.ref = "coil" }
+
+junit = { module = "junit:junit", version.ref = "junit" }
+androidx-test-junit = { module = "androidx.test.ext:junit", version.ref = "testExtJunit" }
+androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
